<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/container"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/firstLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:gravity="center_horizontal"
                tools:ignore="MissingConstraints">
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:id="@+id/img_logo"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/firstLinearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints">
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:id="@+id/img_item"
                    android:layout_gravity="center"
                    android:src="@drawable/item"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/thirdLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/secondLinearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints">
                <Button
                    android:id="@+id/indoToSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indo_to_sign"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourthLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/thirdLinearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints">
                <Button
                    android:id="@+id/signToIndo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_to_indo"
                    android:backgroundTint="@color/yellow"
                    android:textColor="@color/black"
                    />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>